start working with javaslang collections to be more functional.